[4/1/20] - 8:30pm - fixed body overflow problem

--- a/src/components/IE_Error/IEError.scss
+++ b/src/components/IE_Error/IEError.scss
@@ -6,11 +6,13 @@
 }
 
 @media screen and (orientation: portrait) {
-    body {
-        overflow: hidden;
-    }
-
     .ie-error {
         font-size: 3vw;
+    }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    body {
+        overflow: hidden;
     }
 }
